--- a/.github/workflows/deploy-preprod.yaml
+++ b/.github/workflows/deploy-preprod.yaml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '19.x'
-          distribution: adopt
+          distribution: temurin
       - name: Checkout code
         uses: actions/checkout@v3
       - uses: actions/cache@v3
