--- a/.nais/naiserator-prod.yaml
+++ b/.nais/naiserator-prod.yaml
@@ -8,6 +8,21 @@ metadata:
 spec:
   image: {{ image }}
   port: 8080
+  maskinporten:
+    enabled: true
+    scopes:
+      exposes:
+        - name: "v1.lps.write"
+          enabled: true
+          product: "oppfolgingsplan"
+          allowedIntegrations:
+            - maskinporten
+          atMaxAge: 30
+          consumers:
+            - name: "NAV"
+              orgno: "889640782"
+      consumes:
+        - name: "nav:oppfolgingsplan.v1.lps.write"
   liveness:
     path: /isAlive
     initialDelay: 10
