--- a/.nais/naiserator-dev.yaml
+++ b/.nais/naiserator-dev.yaml
@@ -50,3 +50,10 @@ spec:
     path: /prometheus
   ingresses:
     - "https://lps-oppfolgingsplan-mottak.intern.dev.nav.no"
+  filesFrom:
+    - secret: lps-maskinporten-scopes
+  env:
+    - name: KTOR_ENV
+      value: remote
+    - name: APPLICATION_PORT
+      value: "8080"
