--- a/.nais/naiserator-dev.yaml
+++ b/.nais/naiserator-dev.yaml
@@ -22,7 +22,7 @@ spec:
             - name: "NAV"
               orgno: "889640782"
       consumes:
-        - name: "nav:oppfolgingsplan.v1.lps.write"
+        - name: "nav:oppfolgingsplan:v1.lps.write"
   liveness:
     path: /isAlive
     initialDelay: 10
