Expose test endpoint as well and protect it with basic-auth

--- a/.nais/naiserator-prod.yaml
+++ b/.nais/naiserator-prod.yaml
@@ -51,7 +51,7 @@ spec:
   ingresses:
     - "https://lps-oppfolgingsplan-mottak.nav.no"
   filesFrom:
-    - secret: lps-maskinporten-scopes
+    - secret: lps-oppfolgingsplan-mottak-secrets
   env:
     - name: KTOR_ENV
       value: remote
