Expose app through public reachable ingresses (#4)
* Expose app through public reachable ingresses

* Expose test endpoint as well and protect it with basic-auth

--- a/.nais/naiserator-prod.yaml
+++ b/.nais/naiserator-prod.yaml
@@ -49,9 +49,9 @@ spec:
     enabled: true
     path: /prometheus
   ingresses:
-    - "https://lps-oppfolgingsplan-mottak.intern.nav.no"
+    - "https://lps-oppfolgingsplan-mottak.nav.no"
   filesFrom:
-    - secret: lps-maskinporten-scopes
+    - secret: lps-oppfolgingsplan-mottak-secrets
   env:
     - name: KTOR_ENV
       value: remote
