Add newline analysis

--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -651,7 +651,7 @@ style:
   NestedClassesVisibility:
     active: true
   NewLineAtEndOfFile:
-    active: false
+    active: true
   NoTabs:
     active: false
   NullableBooleanCheck:
