--- a/.nais/naiserator-prod.yaml
+++ b/.nais/naiserator-prod.yaml
@@ -45,6 +45,30 @@ spec:
     min: 1
     max: 2
     cpuThresholdPercentage: 90
+  gcp:
+    sqlInstances:
+      - autoBackupHour: 1
+        collation: nb_NO.UTF8
+        databases:
+          - envVarPrefix: GCP_DB
+            name: lps-db
+        diskAutoresize: true
+        diskSize: 80
+        diskType: SSD
+        flags:
+          - name: max_connections
+            value: "50"
+        highAvailability: true
+        insights:
+          enabled: true
+          recordApplicationTags: true
+          recordClientAddress: true
+        maintenance:
+          day: 1
+          hour: 4
+        name: lps-instance
+        tier: db-custom-1-3840
+        type: POSTGRES_15
   prometheus:
     enabled: true
     path: /prometheus
