--- a/nais/nais-prod.yaml
+++ b/nais/nais-prod.yaml
@@ -104,4 +104,4 @@ spec:
     - name: ISDIALOGMELDING_URL
       value: https://isdialogmelding.intern.nav.no
     - name: ISDIALOGMELDING_CLIENT_ID
-      value: prod-gcp:teamsykefravr:isdialogmelding
+      value: api://prod-gcp.teamsykefravr.isdialogmelding/.default
