--- a/nais/nais-prod.yaml
+++ b/nais/nais-prod.yaml
@@ -95,6 +95,8 @@ spec:
       value: remote
     - name: APPLICATION_PORT
       value: "8080"
+    - name: COROUTINE_THREAD_POOL_SIZE
+      value: "4"
     - name: PDL_URL
       value: https://pdl-api.prod-fss-pub.nais.io/graphql
     - name: PDL_SCOPE
@@ -105,3 +107,5 @@ spec:
       value: https://isdialogmelding.intern.nav.no
     - name: ISDIALOGMELDING_CLIENT_ID
       value: api://prod-gcp.teamsykefravr.isdialogmelding/.default
+    - name: SEND_TO_GP_RETRY_THRESHOLD
+      value: "6"
