Run scheduled jobs on leader pod only

--- a/nais/nais-prod.yaml
+++ b/nais/nais-prod.yaml
@@ -90,6 +90,7 @@ spec:
       enabled: true
   kafka:
     pool: nav-prod
+  leaderElection: true
   env:
     - name: KTOR_ENV
       value: remote
