--- a/nais/nais-dev.yaml
+++ b/nais/nais-dev.yaml
@@ -74,6 +74,7 @@ spec:
       external:
         - host: pdl-api.dev-fss-pub.nais.io
         - host: syfooppdfgen.intern.dev.nav.no
+        - host: dokarkiv.dev-fss-pub.nais.io
       rules:
         - application: isdialogmelding
           namespace: teamsykefravr
@@ -104,5 +105,9 @@ spec:
       value: https://isdialogmelding.intern.dev.nav.no
     - name: ISDIALOGMELDING_CLIENT_ID
       value: api://dev-gcp.teamsykefravr.isdialogmelding/.default
+    - name: DOKARKIV_URL
+      value: https://dokarkiv.dev-fss-pub.nais.io
+    - name: DOKARKIV_SCOPE
+      value: api://dev-fss.teamdokumenthandtering.dokarkiv-q1/.default
     - name: SEND_TO_GP_RETRY_THRESHOLD
       value: "6"
