--- a/nais/nais-prod.yaml
+++ b/nais/nais-prod.yaml
@@ -104,9 +104,9 @@ spec:
     - name: PDL_SCOPE
       value: api://prod-fss.pdl.pdl-api/.default
     - name: OP_PDFGEN_URL
-      value: https://syfooppdfgen.intern.nav.no
+      value: http://syfooppdfgen
     - name: ISDIALOGMELDING_URL
-      value: https://isdialogmelding.intern.nav.no
+      value: http://isdialogmelding.teamsykefravr
     - name: ISDIALOGMELDING_CLIENT_ID
       value: api://prod-gcp.teamsykefravr.isdialogmelding/.default
     - name: DOKARKIV_URL
