Add toggles for forwarding-mechanisms to avoid conflict with LPS-plan simultaniously received at syfooppfolgingsplanservice

--- a/nais/nais-prod.yaml
+++ b/nais/nais-prod.yaml
@@ -116,3 +116,9 @@ spec:
       value: api://prod-fss.teamdokumenthandtering.dokarkiv/.default
     - name: SEND_TO_FASTLEGE_RETRY_THRESHOLD
       value: "6"
+    - name: TOGGLE_SEND_TO_NAV
+      value: "false"
+    - name: TOGGLE_SEND_TO_FASTLEGE
+      value: "false"
+    - name: TOGGLE_JOURNALFOR
+      value: "false"
