--- a/nais/nais-dev.yaml
+++ b/nais/nais-dev.yaml
@@ -112,3 +112,9 @@ spec:
       value: api://dev-fss.teamdokumenthandtering.dokarkiv-q1/.default
     - name: SEND_TO_FASTLEGE_RETRY_THRESHOLD
       value: "6"
+    - name: TOGGLE_SEND_TO_NAV
+      value: "false"
+    - name: TOGGLE_SEND_TO_FASTLEGE
+      value: "false"
+    - name: TOGGLE_JOURNALFOR
+      value: "false"
