--- a/nais/nais-prod.yaml
+++ b/nais/nais-prod.yaml
@@ -36,14 +36,14 @@ spec:
     timeout: 5
   resources:
     limits:
-      cpu: 1000m
+      cpu: 2000m
       memory: 1024Mi
     requests:
-      cpu: 500m
+      cpu: 1000m
       memory: 512Mi
   replicas:
     min: 1
-    max: 2
+    max: 3
     cpuThresholdPercentage: 90
   gcp:
     sqlInstances:
@@ -72,13 +72,53 @@ spec:
   prometheus:
     enabled: true
     path: /prometheus
+  accessPolicy:
+    outbound:
+      external:
+        - host: pdl-api.prod-fss-pub.nais.io
+        - host: syfooppdfgen.intern.nav.no
+        - host: dokarkiv.prod-fss-pub.nais.io
+      rules:
+        - application: syfooppdfgen
+        - application: isdialogmelding
+          namespace: teamsykefravr
   ingresses:
     - "https://lps-oppfolgingsplan-mottak.nav.no"
     - "https://lps-oppfolgingsplan-mottak.intern.nav.no"
   filesFrom:
     - secret: lps-oppfolgingsplan-mottak-secrets
+  azure:
+    application:
+      enabled: true
+  kafka:
+    pool: nav-prod
+  leaderElection: true
   env:
     - name: KTOR_ENV
       value: remote
     - name: APPLICATION_PORT
       value: "8080"
+    - name: COROUTINE_THREAD_POOL_SIZE
+      value: "4"
+    - name: PDL_URL
+      value: https://pdl-api.prod-fss-pub.nais.io/graphql
+    - name: PDL_SCOPE
+      value: api://prod-fss.pdl.pdl-api/.default
+    - name: OP_PDFGEN_URL
+      value: http://syfooppdfgen
+    - name: ISDIALOGMELDING_URL
+      value: http://isdialogmelding.teamsykefravr
+    - name: ISDIALOGMELDING_CLIENT_ID
+      value: api://prod-gcp.teamsykefravr.isdialogmelding/.default
+    - name: DOKARKIV_URL
+      value: https://dokarkiv.prod-fss-pub.nais.io
+    - name: DOKARKIV_SCOPE
+      value: api://prod-fss.teamdokumenthandtering.dokarkiv/.default
+    - name: SEND_TO_FASTLEGE_RETRY_THRESHOLD
+      value: "6"
+    - name: TOGGLE_SEND_TO_NAV
+      value: "false"
+    - name: TOGGLE_SEND_TO_FASTLEGE
+      value: "false"
+    - name: TOGGLE_JOURNALFOR
+      value: "false"
