--- a/nais/nais-prod.yaml
+++ b/nais/nais-prod.yaml
@@ -21,6 +21,8 @@ spec:
           consumers:
             - name: "NAV"
               orgno: "889640782"
+            - name: "CATALYSTONE"
+              orgno: "915263836"
       consumes:
         - name: "nav:oppfolgingsplan:v1.lps.write"
   liveness:
