--- a/nais/nais-dev.yaml
+++ b/nais/nais-dev.yaml
@@ -101,17 +101,17 @@ spec:
     - name: PDL_URL
       value: https://pdl-api.dev-fss-pub.nais.io/graphql
     - name: PDL_SCOPE
-      value: api://dev-fss.pdl.pdl-api/.default
+      value: dev-fss.pdl.pdl-api
     - name: OP_PDFGEN_URL
       value: http://syfooppdfgen
     - name: ISDIALOGMELDING_URL
       value: http://isdialogmelding.teamsykefravr
     - name: ISDIALOGMELDING_CLIENT_ID
-      value: api://dev-gcp.teamsykefravr.isdialogmelding/.default
+      value: dev-gcp.teamsykefravr.isdialogmelding
     - name: DOKARKIV_URL
       value: https://dokarkiv.dev-fss-pub.nais.io
     - name: DOKARKIV_SCOPE
-      value: api://dev-fss.teamdokumenthandtering.dokarkiv-q1/.default
+      value: dev-fss.teamdokumenthandtering.dokarkiv-q1
     - name: SEND_TO_FASTLEGE_RETRY_THRESHOLD
       value: "6"
     - name: TOGGLE_SEND_TO_NAV
