--- a/nais/nais-prod.yaml
+++ b/nais/nais-prod.yaml
@@ -105,17 +105,17 @@ spec:
     - name: PDL_URL
       value: https://pdl-api.prod-fss-pub.nais.io/graphql
     - name: PDL_SCOPE
-      value: api://prod-fss.pdl.pdl-api/.default
+      value: prod-fss.pdl.pdl-api
     - name: OP_PDFGEN_URL
       value: http://syfooppdfgen
     - name: ISDIALOGMELDING_URL
       value: http://isdialogmelding.teamsykefravr
     - name: ISDIALOGMELDING_CLIENT_ID
-      value: api://prod-gcp.teamsykefravr.isdialogmelding/.default
+      value: prod-gcp.teamsykefravr.isdialogmelding
     - name: DOKARKIV_URL
       value: https://dokarkiv.prod-fss-pub.nais.io
     - name: DOKARKIV_SCOPE
-      value: api://prod-fss.teamdokumenthandtering.dokarkiv/.default
+      value: prod-fss.teamdokumenthandtering.dokarkiv
     - name: SEND_TO_FASTLEGE_RETRY_THRESHOLD
       value: "6"
     - name: TOGGLE_SEND_TO_NAV
