--- a/nais/nais-prod.yaml
+++ b/nais/nais-prod.yaml
@@ -117,9 +117,9 @@ spec:
     - name: DOKARKIV_SCOPE
       value: prod-fss.teamdokumenthandtering.dokarkiv
     - name: ISTILGANGSKONTROLL_URL
-      value: "http://istilgangskontroll"
+      value: http://istilgangskontroll
     - name: ISTILGANGSKONTROLL_CLIENT_ID
-      value: "prod-gcp.teamsykefravr.istilgangskontroll"
+      value: prod-gcp.teamsykefravr.istilgangskontroll
     - name: SEND_TO_FASTLEGE_RETRY_THRESHOLD
       value: "6"
     - name: TOGGLE_SEND_TO_NAV
