--- a/nais/nais-dev.yaml
+++ b/nais/nais-dev.yaml
@@ -112,6 +112,10 @@ spec:
       value: https://dokarkiv.dev-fss-pub.nais.io
     - name: DOKARKIV_SCOPE
       value: dev-fss.teamdokumenthandtering.dokarkiv-q1
+    - name: ISTILGANGSKONTROLL_URL
+      value: http://istilgangskontroll
+    - name: ISTILGANGSKONTROLL_CLIENT_ID
+      value: dev-gcp.teamsykefravr.istilgangskontroll
     - name: SEND_TO_FASTLEGE_RETRY_THRESHOLD
       value: "6"
     - name: TOGGLE_SEND_TO_NAV
