--- a/nais/nais-prod.yaml
+++ b/nais/nais-prod.yaml
@@ -116,6 +116,10 @@ spec:
       value: https://dokarkiv.prod-fss-pub.nais.io
     - name: DOKARKIV_SCOPE
       value: prod-fss.teamdokumenthandtering.dokarkiv
+    - name: ISTILGANGSKONTROLL_URL
+      value: http://istilgangskontroll
+    - name: ISTILGANGSKONTROLL_CLIENT_ID
+      value: prod-gcp.teamsykefravr.istilgangskontroll
     - name: SEND_TO_FASTLEGE_RETRY_THRESHOLD
       value: "6"
     - name: TOGGLE_SEND_TO_NAV
