--- a/nais/nais-dev.yaml
+++ b/nais/nais-dev.yaml
@@ -11,20 +11,8 @@ spec:
   maskinporten:
     enabled: true
     scopes:
-      exposes:
-        - name: "v1.lps.write"
-          enabled: true
-          product: "oppfolgingsplan"
-          allowedIntegrations:
-            - maskinporten
-          atMaxAge: 600
-          consumers:
-            - name: "NAV"
-              orgno: "889640782"
-            - name: "CATALYSTONE"
-              orgno: "915263836"
       consumes:
-        - name: "nav:oppfolgingsplan:v1.lps.write"
+        - name: "nav:oppfolgingsplan/lps.write"
   liveness:
     path: /internal/is_alive
     initialDelay: 10
@@ -132,3 +120,5 @@ spec:
       value: "false"
     - name: TOGGLE_JOURNALFOR
       value: "false"
+    - name: MASKINPORTEN_CUSTOM_SCOPE_NAME
+      value: "nav:oppfolgingsplan/lps.write"
