Add inbound policy for demo-app in dev

--- a/nais/nais-dev.yaml
+++ b/nais/nais-dev.yaml
@@ -72,6 +72,9 @@ spec:
     enabled: true
     path: /prometheus
   accessPolicy:
+    inbound:
+      rules:
+        - application: oppfolgingsplan-lps-demo
     outbound:
       external:
         - host: pdl-api.dev-fss-pub.nais.io
