--- a/nais/nais-dev.yaml
+++ b/nais/nais-dev.yaml
@@ -75,6 +75,8 @@ spec:
     inbound:
       rules:
         - application: oppfolgingsplan-lps-demo
+        - application: syfomodiaperson
+          namespace: teamsykefravr
     outbound:
       external:
         - host: pdl-api.dev-fss-pub.nais.io
