Allow all AD users to access application

--- a/nais/nais-dev.yaml
+++ b/nais/nais-dev.yaml
@@ -93,6 +93,7 @@ spec:
   azure:
     application:
       enabled: true
+      allowAllUsers: true
   kafka:
     pool: nav-dev
   leaderElection: true
