--- a/nais/nais-prod.yaml
+++ b/nais/nais-prod.yaml
@@ -92,6 +92,7 @@ spec:
   azure:
     application:
       enabled: true
+      allowAllUsers: true
   kafka:
     pool: nav-prod
   leaderElection: true
