wip: request body to swagger doc

--- a/src/main/resources/openapi/documentation.yaml
+++ b/src/main/resources/openapi/documentation.yaml
@@ -51,6 +51,11 @@ paths:
         - Followup-plan API
       security:
         - bearerAuth: [ ]
+      requestBody:
+        content:
+          'text/plain':
+            schema:
+              type: string
       parameters:
         - in: path
           name: uuid
