wip: fixing get call in swagger

--- a/src/main/resources/openapi/documentation.yaml
+++ b/src/main/resources/openapi/documentation.yaml
@@ -54,6 +54,9 @@ paths:
       parameters:
         - in: path
           name: uuid
+          schema:
+            type: string
+          required: true
       responses:
         "200":
           description: "OK"
