--- a/src/main/resources/openapi/documentation.yaml
+++ b/src/main/resources/openapi/documentation.yaml
@@ -6,7 +6,7 @@ info:
 paths:
   /api/test/token:
     get:
-      description: "Henter maskinporten-token for testmiljø"
+      description: "Fetching maskinporten-token for test environment"
       tags:
         - Token for testmiljø
       security:
@@ -41,12 +41,29 @@ paths:
         "200":
           description: "OK"
           content:
-            text/plain:
+            'application/json':
               schema:
-                type: "string"
-              examples:
-                Example#1:
-                  value: "TODO"
+                $ref: "#/components/schemas/FollowUpPlanResponse"
+  /api/v1/followupplan/read/sendingStatus/{uuid}:
+    get:
+      description: "Get a sending status to NAV and general practitioner by follow up plan id"
+      tags:
+        - Followup-plan API
+      security:
+        - bearerAuth: [ ]
+      parameters:
+        - in: path
+          name: uuid
+          schema:
+            type: string
+          required: true
+      responses:
+        "200":
+          description: "OK"
+          content:
+            'application/json':
+              schema:
+                $ref: "#/components/schemas/FollowUpPlanResponse"
 components:
   securitySchemes:
     bearerAuth:
@@ -138,3 +155,16 @@ components:
       - "contactPersonFullName"
       - "contactPersonPhoneNumber"
       - "employeeHasContributedToPlan"
+
+    FollowUpPlanResponse:
+      type: "object"
+      properties:
+        uuid:
+          type: "string"
+          description: "An id for a follow up plan"
+        isSentToGeneralPractitionerStatus:
+          type: "string"
+          description: "Status for sending a plan to general practitioner, true or false"
+        isSentToNavStatus:
+          type: "string"
+          description: "Status for sending a plan to NAV, true or false"
