--- a/nais/nais-dev.yaml
+++ b/nais/nais-dev.yaml
@@ -115,9 +115,9 @@ spec:
     - name: SEND_TO_FASTLEGE_RETRY_THRESHOLD
       value: "6"
     - name: TOGGLE_SEND_LPS_PLAN_TO_NAV
-      value: "true"
+      value: "false"
     - name: TOGGLE_SEND_LPS_PLAN_TO_FASTLEGE
-      value: "true"
+      value: "false"
     - name: TOGGLE_JOURNALFOR_LPS_PLAN
       value: "false"
     - name: TOGGLE_SEND_ALTINN_LPS_PLAN_TO_NAV
