--- a/src/main/resources/openapi/documentation.yaml
+++ b/src/main/resources/openapi/documentation.yaml
@@ -24,7 +24,7 @@ paths:
             '*/*':
               schema:
                 type: "string"
-  /api/v1/followupplan/write:
+  /api/v1/followupplan:
     post:
       description: "Submit follow-up plan to NAV and/or general practitioner"
       tags:
@@ -44,9 +44,9 @@ paths:
             'application/json':
               schema:
                 $ref: "#/components/schemas/FollowUpPlanResponse"
-  /api/v1/followupplan/read/sendingStatus/{uuid}:
+  /api/v1/followupplan/{uuid}/sendingstatus:
     get:
-      description: "Get a sending status to NAV and general practitioner by follow up plan id"
+      description: "Gets the sending status to NAV and general practitioner by follow up plan id"
       tags:
         - Followup-plan API
       security:
@@ -132,6 +132,9 @@ components:
         contactPersonPhoneNumber:
           type: "string"
           description: "Phone number of the person responsible for following up the employee."
+        contactPersonEmail:
+          type: "string"
+          description: "E-mail of the person responsible for following up the employee."
         employeeHasContributedToPlan:
           type: "boolean"
           description: "Has the employee been involved in the process of creating this plan?"
@@ -154,6 +157,7 @@ components:
       - "sendPlanToGeneralPractitioner"
       - "contactPersonFullName"
       - "contactPersonPhoneNumber"
+      - "contactPersonEmail"
       - "employeeHasContributedToPlan"
 
     FollowUpPlanResponse:
