--- a/nais/nais-prod.yaml
+++ b/nais/nais-prod.yaml
@@ -70,6 +70,8 @@ spec:
         - host: syfooppdfgen.intern.nav.no
         - host: dokarkiv.prod-fss-pub.nais.io
       rules:
+        - application: digdir-krr-proxy
+          namespace: team-rocket
         - application: syfooppdfgen
         - application: isdialogmelding
           namespace: teamsykefravr
@@ -128,3 +130,7 @@ spec:
       value: "true"
     - name: MASKINPORTEN_CUSTOM_SCOPE_NAME
       value: "nav:oppfolgingsplan/lps.write"
+    - name: DKIF_URL
+      value: http://digdir-krr-proxy.team-rocket/rest/v1/person
+    - name: DKIF_SCOPE
+      value: prod-gcp.team-rocket.digdir-krr-proxy
