wip: added eereg client

--- a/nais/nais-prod.yaml
+++ b/nais/nais-prod.yaml
@@ -128,3 +128,6 @@ spec:
       value: "true"
     - name: MASKINPORTEN_CUSTOM_SCOPE_NAME
       value: "nav:oppfolgingsplan/lps.write"
+    - name: EREG_BASEURL
+      value: https://modapp.adeo.no
+
